{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 87,
  "lineage": "a35d9a9d-7204-6fdc-fb2d-80d6b336c662",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cfcdcdccbb95372",
            "arn": "arn:aws:ec2:us-east-1:342597974367:elastic-ip/eipalloc-00cfcdcdccbb95372",
            "association_id": "eipassoc-0af216fb489c5a398",
            "domain": "vpc",
            "id": "eipalloc-00cfcdcdccbb95372",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d2002f1d02df4b9f",
            "private_dns": "ip-10-0-0-30.ec2.internal",
            "private_ip": "10.0.0.30",
            "public_dns": "ec2-100-30-140-98.compute-1.amazonaws.com",
            "public_ip": "100.30.140.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-1-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-eip-1-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b68a2ceab41b432",
            "arn": "arn:aws:ec2:us-east-1:342597974367:elastic-ip/eipalloc-08b68a2ceab41b432",
            "association_id": "eipassoc-0d67e0a98d5c36393",
            "domain": "vpc",
            "id": "eipalloc-08b68a2ceab41b432",
            "network_border_group": "us-east-1",
            "network_interface": "eni-016298f842238c825",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-3-230-44-68.compute-1.amazonaws.com",
            "public_ip": "3.230.44.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-2-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-eip-2-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:internet-gateway/igw-026646d1d87d1f5c1",
            "id": "igw-026646d1d87d1f5c1",
            "owner_id": "342597974367",
            "tags": {
              "Name": "igw-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "igw-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/alb-synth101912382/c25762ccc3e5d128",
            "arn_suffix": "app/alb-synth101912382/c25762ccc3e5d128",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-synth101912382-1167386365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/alb-synth101912382/c25762ccc3e5d128",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-synth101912382",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d7d2062f40317c7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020fd16bb20499480"
              },
              {
                "subnet_id": "subnet-023b66ae412e0e334"
              }
            ],
            "subnets": [
              "subnet-020fd16bb20499480",
              "subnet-023b66ae412e0e334"
            ],
            "tags": {
              "Name": "alb-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "alb-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "vpc_id": "vpc-0399b6cf3033489bb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/alb-synth101912382/c25762ccc3e5d128/2d211ee0452e99e3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-2025111913242215850000000d/ff48f6ebf1cfb282",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/green-2025111913242215930000000e/d212b8651c20361f",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/alb-synth101912382/c25762ccc3e5d128/2d211ee0452e99e3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/alb-synth101912382/c25762ccc3e5d128",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.blue",
            "aws_lb_target_group.green",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-2025111913242215850000000d/ff48f6ebf1cfb282",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/green-2025111913242215930000000e/d212b8651c20361f",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener-rule/app/alb-synth101912382/c25762ccc3e5d128/2d211ee0452e99e3/b80bbccd49c291dd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener-rule/app/alb-synth101912382/c25762ccc3e5d128/2d211ee0452e99e3/b80bbccd49c291dd",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/alb-synth101912382/c25762ccc3e5d128/2d211ee0452e99e3",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.blue",
            "aws_lb_target_group.green",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-2025111913242215850000000d/ff48f6ebf1cfb282",
            "arn_suffix": "targetgroup/blue-2025111913242215850000000d/ff48f6ebf1cfb282",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/blue-2025111913242215850000000d/ff48f6ebf1cfb282",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/alb-synth101912382/c25762ccc3e5d128"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-2025111913242215850000000d",
            "name_prefix": "blue-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "blue-tg-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "blue-tg-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/green-2025111913242215930000000e/d212b8651c20361f",
            "arn_suffix": "targetgroup/green-2025111913242215930000000e/d212b8651c20361f",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/green-2025111913242215930000000e/d212b8651c20361f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/alb-synth101912382/c25762ccc3e5d128"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "green-2025111913242215930000000e",
            "name_prefix": "green-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "green-tg-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "green-tg-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cfcdcdccbb95372",
            "association_id": "eipassoc-0af216fb489c5a398",
            "connectivity_type": "public",
            "id": "nat-08a98d6b3a44950e4",
            "network_interface_id": "eni-0d2002f1d02df4b9f",
            "private_ip": "10.0.0.30",
            "public_ip": "100.30.140.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-023b66ae412e0e334",
            "tags": {
              "Name": "nat-gateway-1-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-gateway-1-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b68a2ceab41b432",
            "association_id": "eipassoc-0d67e0a98d5c36393",
            "connectivity_type": "public",
            "id": "nat-0093415e98cf119a5",
            "network_interface_id": "eni-016298f842238c825",
            "private_ip": "10.0.1.251",
            "public_ip": "3.230.44.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020fd16bb20499480",
            "tags": {
              "Name": "nat-gateway-2-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nat-gateway-2-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-071e4107a7b2802b1",
            "id": "rtb-071e4107a7b2802b1",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08a98d6b3a44950e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-1-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-rt-1-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-0d2f21856ac171262",
            "id": "rtb-0d2f21856ac171262",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0093415e98cf119a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-2-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-rt-2-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-08d10fecdfb349202",
            "id": "rtb-08d10fecdfb349202",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026646d1d87d1f5c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-rt-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c1d65d4bccb721a",
            "route_table_id": "rtb-071e4107a7b2802b1",
            "subnet_id": "subnet-08a7353a4d74409c4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c197d9a9d556127b",
            "route_table_id": "rtb-0d2f21856ac171262",
            "subnet_id": "subnet-0cf3be27c006f0b8b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da879d01e8f5d450",
            "route_table_id": "rtb-08d10fecdfb349202",
            "subnet_id": "subnet-023b66ae412e0e334"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ebc44e48209bcf2",
            "route_table_id": "rtb-08d10fecdfb349202",
            "subnet_id": "subnet-020fd16bb20499480"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-00d7d2062f40317c7",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00d7d2062f40317c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg-synth101912382-20251119132424455100000010",
            "name_prefix": "alb-sg-synth101912382-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "alb-sg-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-017afadb913b9a9ca",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-017afadb913b9a9ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d7d2062f40317c7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-tasks-sg-synth101912382-20251119132428899900000013",
            "name_prefix": "ecs-tasks-sg-synth101912382-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-tasks-sg-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ecs-tasks-sg-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_rotation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-080185e698cea81f3",
            "description": "Security group for Lambda secrets rotation",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to Secrets Manager",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-080185e698cea81f3",
            "ingress": [],
            "name": "lambda-rotation-sg-synth101912382-2025111913242440230000000f",
            "name_prefix": "lambda-rotation-sg-synth101912382-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda-rotation-sg-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lambda-rotation-sg-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0bf8bcf8667c96318",
            "description": "Security group for RDS Aurora PostgreSQL",
            "egress": [],
            "id": "sg-0bf8bcf8667c96318",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017afadb913b9a9ca"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg-synth101912382-2025111913242215750000000c",
            "name_prefix": "rds-sg-synth101912382-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rds-sg-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL to RDS",
            "from_port": 5432,
            "id": "sgrule-3756167271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017afadb913b9a9ca",
            "security_group_rule_id": "sgr-0b61e0a5e4f3b06a3",
            "self": false,
            "source_security_group_id": "sg-0bf8bcf8667c96318",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from ECS tasks",
            "from_port": 5432,
            "id": "sgrule-2691060051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bf8bcf8667c96318",
            "security_group_rule_id": "sgr-0d9e1893211215d4a",
            "self": false,
            "source_security_group_id": "sg-017afadb913b9a9ca",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-06d3e473e40a8a22b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d3e473e40a8a22b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet-1-synth101912382",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "database-subnet-1-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard",
              "Type": "database"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0f620ef41f2c1a024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f620ef41f2c1a024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet-2-synth101912382",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "database-subnet-2-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard",
              "Type": "database"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-08a7353a4d74409c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a7353a4d74409c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1-synth101912382",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-1-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard",
              "Type": "private"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0cf3be27c006f0b8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf3be27c006f0b8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2-synth101912382",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-2-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard",
              "Type": "private"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-023b66ae412e0e334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023b66ae412e0e334",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-synth101912382",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard",
              "Type": "public"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-020fd16bb20499480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020fd16bb20499480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2-synth101912382",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-2-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard",
              "Type": "public"
            },
            "vpc_id": "vpc-0399b6cf3033489bb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:vpc/vpc-0399b6cf3033489bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af753a3a8e288602",
            "default_route_table_id": "rtb-032873eb14b06a4c8",
            "default_security_group_id": "sg-0ea79bbd6ca5d5994",
            "dhcp_options_id": "dopt-096ea572b45cebc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0399b6cf3033489bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032873eb14b06a4c8",
            "owner_id": "342597974367",
            "tags": {
              "Name": "vpc-synth101912382"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vpc-synth101912382",
              "Owner": "iac-qa-team",
              "Project": "trading-dashboard"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}